# gui_based_shogi_engine

./: .gitignore  CMakeLists.txt
cpp/: action.hpp  cv_mat_to_tensor.hpp  decision_transformer.cpp  decision_transformer.hpp  grid_world.cpp  grid_world.hpp  gui_control.cpp  gui_control.hpp  main.cpp  main_for_offline_training.cpp  main_for_play.cpp  main_for_random_agent.cpp  main_for_train_decision_transformer.cpp  neural_network.cpp  neural_network.hpp  window_size.hpp
cpp/main_functions/: play_decision_transformer.cpp  play_policy.cpp  solve_grid_world.cpp  solve_grid_world_by_table.cpp  train_decision_transformer.cpp  train_policy.cpp
python/: parse_info_tsv.py  plot_grid_world_log.py
python/bbf/: .gitignore  README.md  install.sh
python/bbf/bbf/: eval_run_experiment.py  normalize_score.py  spr_agent.py  spr_networks.py  train.py
python/bbf/bbf/agents/: spr_agent.py
python/bbf/bbf/configs/: BBF.gin  DrQ.gin  OTRainbow.gin  SPR.gin  SR_SPR.gin  der.gin  dopamine_der.gin  rainbow.gin
python/bbf/bbf/replay_memory/: subsequence_replay_buffer.py
python/clearnrl/: action.py  custom_replay_buffer.py  dqn.py  env_grid_world.py  evaluate.py  network.py  ppo.py
python/dreamer/: README.md  actor.py  buffer.py  config.yaml  critic.py  decoder.py  dreamer.py  encoder.py  env_grid_world.py  main.py  model.py  utils.py
python/grid_world/: grid_world.py  replay_buffer.py  solve_grid_world.py
python/sb3/: custom_buffer.py  custom_callback.py  custom_dqn.py  custom_policy.py  env_grid_world.py  main.py  main_transformer.py
script/: build_and_exec.sh  play_decision_transformer.sh  play_policy.sh  solve_grid_world.sh  solve_grid_world_by_table.sh  train_decision_transformer.sh
training_game/: .gitignore  CMakeLists.txt  Main.cpp  build_and_exec.sh
